Programming Language/Linux/Books&following/실습과 그림으로 배우는 리눅스 구조/5장 메모리 관리-1.txt
[jae@localhost ~]$ free
              total        used        free      shared  buff/cache   available
Mem:         995896      692532       75544       19904      227820       75264
Swap:       2097148       97024     2000124
[jae@localhost ~]$ sar -r 1
Linux 3.10.0-957.el7.x86_64 (localhost.localdomain) 	2019년 09월 01일 	_x86_64_	(1 CPU)

00시 37분 39초 kbmemfree kbmemused  %memused kbbuffers  kbcached  kbcommit   %commit  kbactive   kbinact   kbdirty
00시 37분 40초     71576    924320     92.81         0    118868   4309252    139.32    318348    312616        16
00시 37분 41초     72912    922984     92.68         0    118896   4311184    139.38    317276    312440        20
00시 37분 42초     72912    922984     92.68         0    118896   4311184    139.38    317280    312440        20
00시 37분 43초     72912    922984     92.68         0    118896   4311184    139.38    317280    312440        20
00시 37분 44초     73000    922896     92.67         0    118896   4307668    139.27    317192    312440        20
00시 37분 45초     73000    922896     92.67         0    118896   4307668    139.27    317192    312440        12
00시 37분 46초     73000    922896     92.67         0    118896   4307668    139.27    317192    312440        12
^C
00시 37분 47초     73000    922896     92.67         0    118896   4307668    139.27    317192    312440        12
Average:        72789    923107     92.69         0    118892   4309184    139.32    317369    312462        16
[jae@localhost ~]$ cd ./문서/
[jae@localhost 문서]$ ls -a
.  ..  1core-1process.txt  loop.py  sched  sched.c  sched_nice  sched_nice.c
[jae@localhost 문서]$ cc -o segv segv.c 
[jae@localhost 문서]$ ls -a
.   1core-1process.txt  sched    sched_nice    segv
..  loop.py             sched.c  sched_nice.c  segv.c
[jae@localhost 문서]$ cc -o segv segv.c 
[jae@localhost 문서]$ cat segv.c
#include <stdio.h>
#include <stdlib.h>

int main(void)
{
	int *p = NULL;
	puts("before invalid access");
	*p = 0;
	puts("after invalid access");
	exit(EXIT_SUCCESS);
}
[jae@localhost 문서]$ cc -o mmap mmap.c 
[jae@localhost 문서]$ ./mmap
*** memory map before memory allocation ***
00400000-00401000 r-xp 00000000 fd:00 75812                              /home/jae/문서/mmap
00600000-00601000 r--p 00000000 fd:00 75812                              /home/jae/문서/mmap
00601000-00602000 rw-p 00001000 fd:00 75812                              /home/jae/문서/mmap
7ff76e964000-7ff76eb26000 r-xp 00000000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76eb26000-7ff76ed26000 ---p 001c2000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed26000-7ff76ed2a000 r--p 001c2000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed2a000-7ff76ed2c000 rw-p 001c6000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed2c000-7ff76ed31000 rw-p 00000000 00:00 0 
7ff76ed31000-7ff76ed53000 r-xp 00000000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef38000-7ff76ef3b000 rw-p 00000000 00:00 0 
7ff76ef50000-7ff76ef52000 rw-p 00000000 00:00 0 
7ff76ef52000-7ff76ef53000 r--p 00021000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef53000-7ff76ef54000 rw-p 00022000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef54000-7ff76ef55000 rw-p 00000000 00:00 0 
7fff185da000-7fff185fb000 rw-p 00000000 00:00 0                          [stack]
7fff185fc000-7fff185fe000 r-xp 00000000 00:00 0                          [vdso]
ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0                  [vsyscall]

*** succeeded to allocate memory: address = 0x7ff768564000; size = 0x6400000 ***

*** memory map after memory allocation ***
00400000-00401000 r-xp 00000000 fd:00 75812                              /home/jae/문서/mmap
00600000-00601000 r--p 00000000 fd:00 75812                              /home/jae/문서/mmap
00601000-00602000 rw-p 00001000 fd:00 75812                              /home/jae/문서/mmap
7ff768564000-7ff76e964000 rw-p 00000000 00:00 0 
7ff76e964000-7ff76eb26000 r-xp 00000000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76eb26000-7ff76ed26000 ---p 001c2000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed26000-7ff76ed2a000 r--p 001c2000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed2a000-7ff76ed2c000 rw-p 001c6000 fd:00 160872                     /usr/lib64/libc-2.17.so
7ff76ed2c000-7ff76ed31000 rw-p 00000000 00:00 0 
7ff76ed31000-7ff76ed53000 r-xp 00000000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef38000-7ff76ef3b000 rw-p 00000000 00:00 0 
7ff76ef50000-7ff76ef52000 rw-p 00000000 00:00 0 
7ff76ef52000-7ff76ef53000 r--p 00021000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef53000-7ff76ef54000 rw-p 00022000 fd:00 160865                     /usr/lib64/ld-2.17.so
7ff76ef54000-7ff76ef55000 rw-p 00000000 00:00 0 
7fff185da000-7fff185fb000 rw-p 00000000 00:00 0                          [stack]
7fff185fc000-7fff185fe000 r-xp 00000000 00:00 0                          [vdso]
ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0                  [vsyscall]
[jae@localhost 문서]$ python -c "print(0x7ff768564000 - 7fff185fe000)"
  File "<string>", line 1
    print(0x7ff768564000 - 7fff185fe000)
                                      ^
SyntaxError: invalid syntax
[jae@localhost 문서]$ python -c "print(0x7ff768564000 - 0x7fff185fe000)"
-33018191872
[jae@localhost 문서]$